# msjepa

./: .gitignore  README.md  notebook_cell_simple_model.py  notebook_train_cell.py  pyproject.toml
configs/: debug.yaml  default.yaml
docs/: HYPERPARAMETERS.md  INSTALL.md
msjepa/: __init__.py  config.py  data.py  decoder.py  ema.py  losses.py  masking.py  model.py  notebook_ddp.py  positional.py  predictor.py  sigreg.py  swin_encoder.py  tokenizer.py  train.py  utils.py  validate.py
